# whooper

./: CHANGELOG.md  README.md  dev_requirements.txt  pyproject.toml
test/: test_redshift.py  test_s3.py
whooper/: __init__.py  _redshift.py
