[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "whooper"
author = "Nick Buker"
author-email = "nickbuker@gmail.com"
home-page = "TODO"
requires = [
    "boto3 >=1.9.38", # TODO: update
    "psycopg2-binary >=2.7.5", # TODO: change package
]
requires-python = ">=3.6,<4"
description-file = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
